[package]
name = "egui-macroquad"
version = "0.16.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "0.30.0"
# use a fork of egui-miniquad that's been updated to support egui 0.30.0
egui-miniquad = { git = 'https://github.com/zyllian/egui-miniquad.git', rev="9b05f831d9f1f131c6f06c1b871bcc7f26a4b466" }
macroquad = { version="0.4.13", default-features=false }

[features]
default = ["audio"]
audio = ["macroquad/audio"]

[dev-dependencies]
egui_demo_lib = "0.30.0"

[profile.release]
opt-level = 2
